Implement Put API to update comments
