# app/api/v1/router.py
@@ -16,7 +16,7 @@ from app.api.v1.endpoints.tasks.put_task_id import (router as put_task_id_router
 from app.api.v1.endpoints.tasks.delete_task_id import (router as delete_task_id_router)
 from app.api.v1.endpoints.comments.get_comment import (router as get_comment_router)
 from app.api.v1.endpoints.comments.post_comment import (router as post_comment_router)
-
+from app.api.v1.endpoints.comments.put_comments import (router as put_comment_router)
 
 router = APIRouter()
 
@@ -43,3 +43,4 @@ router.include_router(delete_task_id_router, prefix="", tags=["tasks/"])
 # Comment
 router.include_router(get_comment_router, prefix="", tags=["comments/"])
 router.include_router(post_comment_router, prefix="", tags=["comments/"])
+router.include_router(put_comment_router, prefix="", tags=["comments/"])
